navbar, footer and home page added

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>my-closet-frontend</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@1.0.2/css/bulma.min.css"/>
+    <link rel="stylesheet" href="css/nav.css">
+    <link rel="stylesheet" href="css/footer.css">
+    <link rel="stylesheet" href="css/main-panel.css">
+    <link rel="stylesheet" href="css/home.css">
   </head>
   <body>
     <noscript>
