get-recommendation page added

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="css/main-panel.css">
     <link rel="stylesheet" href="css/home.css">
+    <link rel="stylesheet" href="css/get-recommendation.css">
   </head>
   <body>
     <noscript>
