--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/main-panel.css">
     <link rel="stylesheet" href="css/home.css">
     <link rel="stylesheet" href="css/get-recommendation.css">
+    <link rel="stylesheet" href="css/recommendations.css">
   </head>
   <body>
     <noscript>
