my-clothes page added

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="css/get-recommendation.css">
     <link rel="stylesheet" href="css/recommendations.css">
     <link rel="stylesheet" href="css/liked.css">
+    <link rel="stylesheet" href="css/my-clothes.css">
   </head>
   <body>
     <noscript>
